clusters/talos-cluster/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  selector:
    app: authentik-server
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: http
    - protocol: TCP
      port: 9443
      targetPort: 9443
      name: https
