clusters/talos-cluster/authentik/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: authentik
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "authentik.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 3001
